welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:2: error: too many arguments for method getCouleurBrosse: ()java.awt.Color
  getCouleurBrosse(c)
                  ^FlowerPot:9: error: too many arguments for method getCouleurBrosse: ()java.awt.Color
  getCouleurBrosse(Color.YELLOW)
                  ^