welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def fleur(c:Color) = {
  getCouleurBrosse(c)
  for (i <- 1 to 2) {avance()}
  recule()
  gauche()
  for (i <- 1 to 2) {avance()}
  recule()
  droite()
  getCouleurBrosse(Color.YELLOW)
  leveBrosse()
  recule()
}

def growFlowers() = {
  fleur(Color.RED)
}
